@@ -216,10 +216,10 @@ static struct argp argp = {
 
 static const char *frm_argp_capa[] = {
   "common",
+  "debug",
   "license",
   "mailbox",
   "locking",
-  "debug",
   NULL
 };
 
