@@ -1,3 +1,12 @@
+2008-11-27  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	Add iterator support to opool.
+	
+	* include/mailutils/opool.h (mu_opool_get_iterator): New function.
+	* mailbox/opool.c (mu_opool_get_iterator): New function.
+	* mailbox/hdritr.c (hdr_data_dup): Bugfix: notify owner about the
+	new iterator.
+
 2008-11-21  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	* auth/sql.c (get_field): NULL value in an optional field is
